@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<project name="cuts.log4j" basedir="E:/proj/CUTS/cuts/java/utils/logging/client/interceptors/log4j" default="build">
+<project name="cuts.log4j" basedir="." default="build">
 <property environment="env" />
 <property name="contrib.dir" value="${env.CUTS_ROOT}/contrib/java" />
 
@@ -9,7 +9,7 @@
       <pathelement path="${env.CUTS_ROOT}/lib/CUTS.TestLogger.jar" />
     </path>
 
-    <javac srcdir="E:/proj/CUTS/cuts/java/utils/logging/client/interceptors/log4j"
+    <javac srcdir="."
            debug="true"
            debuglevel="source,lines"
            classpathref="build.classpath"
@@ -17,7 +17,7 @@
       <include name="cuts/log4j/LoggingClientAppender.java" />
     </javac>
 
-    <jar basedir="E:/proj/CUTS/cuts/java/utils/logging/client/interceptors/log4j"
+    <jar basedir="."
          destfile="${env.CUTS_ROOT}/lib/cuts.log4j.jar" >
       <include name="cuts/log4j/LoggingClientAppender.class" />
     </jar>
