@@ -1,3 +1,10 @@
+Wed May 20 06:32:58 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/java/utils/logging/client/interceptors/log4j/cuts.log4j.build.xml:
+        * examples/java/logging/client/log4j/HelloWorld.java:
+
+          . Fixed build errors related to porting.
+
 Wed May 20 06:05:51 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
 
         * cuts/java/utils/logging/client/interceptors/log4j/cuts/log4j/LoggingClientAppender.java:
